[gd_scene load_steps=34 format=3 uid="uid://dk8plt5xrpauo"]

[ext_resource type="Script" path="res://Scenes/World/test_world.gd" id="1_e1uw3"]
[ext_resource type="Texture2D" uid="uid://d1uh30r0tqe6j" path="res://Resources/Sprites/UI/Player/PlayerMenu.png" id="5_a7fta"]
[ext_resource type="Theme" uid="uid://ctvwvg4pnt4yd" path="res://Themes/PlayerTheme.tres" id="5_tqaxl"]
[ext_resource type="Texture2D" uid="uid://c1ak77nbw7g1b" path="res://Resources/Sprites/UI/Player/Options1.png" id="6_r4ea5"]
[ext_resource type="Texture2D" uid="uid://cgi4aci74l2dh" path="res://Resources/Sprites/UI/Player/PlayButtons3.png" id="7_ow8is"]
[ext_resource type="Texture2D" uid="uid://q404ir4s4mr8" path="res://Resources/Sprites/UI/Player/Options2.png" id="7_p6jx7"]
[ext_resource type="Texture2D" uid="uid://dsdtt5qas8xqp" path="res://Resources/Sprites/UI/Player/PlayButtons4.png" id="8_nkscm"]
[ext_resource type="Texture2D" uid="uid://bm4f8nd41aj2i" path="res://Resources/Sprites/UI/Player/PlayButtons1.png" id="9_um0un"]
[ext_resource type="Texture2D" uid="uid://dr3tdbswtbtkh" path="res://Resources/Sprites/UI/Player/PlayButtons2.png" id="10_04his"]
[ext_resource type="Texture2D" uid="uid://fljawoe4f4md" path="res://Resources/Sprites/UI/Player/ChoiceButton1.png" id="11_a0gcq"]
[ext_resource type="Texture2D" uid="uid://r8kt3dyrismh" path="res://Resources/Sprites/UI/Player/ChoiceButton2.png" id="12_20kb3"]
[ext_resource type="Texture2D" uid="uid://ctwi3j4g7j04u" path="res://Resources/Sprites/UI/Player/TimeProgressBarShort1.png" id="13_6l1dy"]
[ext_resource type="Texture2D" uid="uid://bdrny4g63w53j" path="res://Resources/Sprites/UI/Player/LowTimeProgressBar.png" id="14_14f05"]
[ext_resource type="Texture2D" uid="uid://c73wjm3wnjkbs" path="res://Resources/Sprites/UI/Player/TimeProgressBarShort2.png" id="14_d5mao"]
[ext_resource type="Texture2D" uid="uid://b8ehphkjs1iwr" path="res://Resources/Sprites/UI/Menus/MenuPanel.png" id="17_e3x7i"]
[ext_resource type="Theme" uid="uid://w073xaxkj70j" path="res://Themes/menu_theme.tres" id="18_sogju"]
[ext_resource type="PackedScene" uid="uid://chvldwh2dohef" path="res://Scenes/Menus/MenuComponents/menu_button.tscn" id="19_ntvnj"]
[ext_resource type="Texture2D" uid="uid://g51oiwoepmhw" path="res://Resources/Sprites/UI/Player/TargetCursor/TargetCursor1.png" id="20_6qm2r"]
[ext_resource type="Texture2D" uid="uid://ybicmsul58sf" path="res://Resources/Sprites/UI/Player/TargetCursor/TargetCursor2.png" id="21_dnfsd"]
[ext_resource type="Texture2D" uid="uid://dkmb4s6737ren" path="res://Resources/Sprites/UI/Player/TargetCursor/TargetCursor3.png" id="22_osslv"]
[ext_resource type="PackedScene" uid="uid://dfwpcorv33egi" path="res://Scenes/Menus/level_end.tscn" id="23_mivtv"]
[ext_resource type="PackedScene" uid="uid://cq244cu7oma5j" path="res://Scenes/Menus/options_menu.tscn" id="23_v0dc1"]
[ext_resource type="Texture2D" uid="uid://ctfa41gwrivcm" path="res://Resources/Sprites/UI/Player/TargetCursor/TargetCursor4.png" id="23_yqkkn"]
[ext_resource type="Texture2D" uid="uid://djbgq73wquvrs" path="res://Resources/Sprites/UI/Player/TargetCursor/TargetCursor5.png" id="24_q416p"]
[ext_resource type="AudioStream" uid="uid://chm7qnrjfj2fn" path="res://Resources/Sounds/SFX/PlayPause.wav" id="25_0qrxv"]
[ext_resource type="Texture2D" uid="uid://cu63gvjdxn6s" path="res://Resources/Sprites/UI/Player/TargetCursor/TargetCursor6.png" id="25_ifgjs"]
[ext_resource type="AudioStream" uid="uid://s5gehd3kqx6g" path="res://Resources/Sounds/SFX/SliderTIck.wav" id="26_gkdlk"]
[ext_resource type="AudioStream" uid="uid://rddt3b8v74ph" path="res://Resources/Sounds/SFX/RedButton.wav" id="27_5do48"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0t2sh"]
texture = ExtResource("13_6l1dy")
axis_stretch_vertical = 1
region_rect = Rect2(0, 0, 14, 4)

[sub_resource type="Animation" id="Animation_p28cs"]
resource_name = "LowTime"
length = 0.0333367
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%TimeProgressBar:theme_override_styles/fill:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("14_14f05")]
}

[sub_resource type="Animation" id="Animation_a5qjs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%TimeProgressBar:theme_override_styles/fill:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("13_6l1dy")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m58ge"]
_data = {
"LowTime": SubResource("Animation_p28cs"),
"RESET": SubResource("Animation_a5qjs")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_mm8ex"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_6qm2r")
}, {
"duration": 1.0,
"texture": ExtResource("21_dnfsd")
}, {
"duration": 1.0,
"texture": ExtResource("22_osslv")
}, {
"duration": 1.0,
"texture": ExtResource("23_yqkkn")
}, {
"duration": 1.0,
"texture": ExtResource("24_q416p")
}, {
"duration": 1.0,
"texture": ExtResource("25_ifgjs")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[node name="TestWorld" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_e1uw3")
own_path = "res://Scenes/World/test_world.tscn"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(480, 270)

[node name="Background" type="Node2D" parent="."]

[node name="Figures" type="Node2D" parent="."]
y_sort_enabled = true
position = Vector2(480, 270)

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 1
offset_right = 960.0
offset_bottom = 540.0
color = Color(0, 0, 0.654902, 0.117647)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="TimeLimit" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_a7fta")
metadata/_edit_lock_ = true

[node name="CenterContainer" type="CenterContainer" parent="UI/TextureRect"]
layout_mode = 0
offset_left = 20.0
offset_top = 18.0
offset_right = 90.0
offset_bottom = 82.0

[node name="GearButton" type="TextureButton" parent="UI/TextureRect/CenterContainer"]
layout_mode = 2
texture_normal = ExtResource("6_r4ea5")
texture_hover = ExtResource("7_p6jx7")

[node name="MarginContainer" type="MarginContainer" parent="UI/TextureRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -354.0
offset_top = -66.0
offset_right = 354.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 30

[node name="VideoSlider" type="HSlider" parent="UI/TextureRect/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_tqaxl")
step = 0.1
value = 1.0
scrollable = false

[node name="PlayButton" type="TextureButton" parent="UI/TextureRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 872.0
offset_top = 450.0
offset_right = 938.0
offset_bottom = 486.0
texture_normal = ExtResource("7_ow8is")
texture_pressed = ExtResource("8_nkscm")
texture_disabled = ExtResource("8_nkscm")

[node name="PauseButton" type="TextureButton" parent="UI/TextureRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 872.0
offset_top = 490.0
offset_right = 938.0
offset_bottom = 526.0
texture_normal = ExtResource("9_um0un")
texture_pressed = ExtResource("10_04his")
texture_disabled = ExtResource("10_04his")

[node name="ChoiceButton" type="TextureButton" parent="UI/TextureRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 454.0
offset_right = 90.0
offset_bottom = 530.0
disabled = true
texture_normal = ExtResource("11_a0gcq")
texture_pressed = ExtResource("12_20kb3")

[node name="TimeProgressBar" type="ProgressBar" parent="UI/TextureRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 56.0
offset_top = 444.0
offset_right = 70.0
offset_bottom = 784.0
rotation = 3.14159
theme_override_styles/fill = SubResource("StyleBoxTexture_0t2sh")
max_value = 170.0
step = 1.0
value = 170.0
fill_mode = 2
show_percentage = false

[node name="NinePatchRect" type="NinePatchRect" parent="UI/TextureRect/TimeProgressBar"]
layout_mode = 0
offset_right = 14.0
offset_bottom = 340.0
texture = ExtResource("14_d5mao")
draw_center = false
region_rect = Rect2(0, 0, 14, 4)
patch_margin_top = 2
patch_margin_bottom = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI"]
libraries = {
"": SubResource("AnimationLibrary_m58ge")
}
autoplay = "RESET"

[node name="PauseScreen" type="CanvasLayer" parent="."]
process_mode = 2
visible = false

[node name="ColorRect" type="ColorRect" parent="PauseScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.501961)

[node name="NinePatchRect" type="NinePatchRect" parent="PauseScreen/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -148.0
offset_right = 200.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("17_e3x7i")
patch_margin_left = 44
patch_margin_top = 32
patch_margin_right = 44
patch_margin_bottom = 32
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="ButtonHole" type="ColorRect" parent="PauseScreen/ColorRect/NinePatchRect"]
layout_mode = 0
offset_left = 131.0
offset_top = 64.0
offset_right = 269.0
offset_bottom = 124.0
color = Color(0, 0, 0, 1)

[node name="ButtonHole2" type="ColorRect" parent="PauseScreen/ColorRect/NinePatchRect"]
layout_mode = 0
offset_left = 133.0
offset_top = 62.0
offset_right = 267.0
offset_bottom = 126.0
color = Color(0, 0, 0, 1)

[node name="ButtonHole3" type="ColorRect" parent="PauseScreen/ColorRect/NinePatchRect"]
layout_mode = 0
offset_left = 131.0
offset_top = 140.0
offset_right = 269.0
offset_bottom = 200.0
color = Color(0, 0, 0, 1)

[node name="ButtonHole4" type="ColorRect" parent="PauseScreen/ColorRect/NinePatchRect"]
layout_mode = 0
offset_left = 133.0
offset_top = 138.0
offset_right = 267.0
offset_bottom = 202.0
color = Color(0, 0, 0, 1)

[node name="ButtonHole8" type="ColorRect" parent="PauseScreen/ColorRect/NinePatchRect"]
layout_mode = 0
offset_left = 104.0
offset_top = 214.0
offset_right = 296.0
offset_bottom = 278.0
color = Color(0, 0, 0, 1)

[node name="ButtonHole7" type="ColorRect" parent="PauseScreen/ColorRect/NinePatchRect"]
layout_mode = 0
offset_left = 102.0
offset_top = 216.0
offset_right = 298.0
offset_bottom = 276.0
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="PauseScreen/ColorRect/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PauseScreen/ColorRect/NinePatchRect/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PauseScreen/ColorRect/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("18_sogju")
text = "GAME PAUSED"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PauseScreen/ColorRect/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 4

[node name="CenterContainer" type="CenterContainer" parent="PauseScreen/ColorRect/NinePatchRect/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="VBoxContainer" parent="PauseScreen/ColorRect/NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Unpause Button" parent="PauseScreen/ColorRect/NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/GridContainer" instance=ExtResource("19_ntvnj")]
unique_name_in_owner = true
layout_mode = 2
text = "Unpause"

[node name="Options Button" parent="PauseScreen/ColorRect/NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/GridContainer" instance=ExtResource("19_ntvnj")]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="Quit Button" parent="PauseScreen/ColorRect/NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/GridContainer" instance=ExtResource("19_ntvnj")]
unique_name_in_owner = true
layout_mode = 2
text = "Level Select"

[node name="OptionsMenu" parent="." instance=ExtResource("23_v0dc1")]
visible = false

[node name="LevelEnd" parent="." instance=ExtResource("23_mivtv")]
visible = false

[node name="TargetCursor" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 6
position = Vector2(48.8757, 493.687)
sprite_frames = SubResource("SpriteFrames_mm8ex")
autoplay = "default"
frame_progress = 0.845748

[node name="PlayPause" type="AudioStreamPlayer" parent="."]
stream = ExtResource("25_0qrxv")
bus = &"SFX"

[node name="SliderTick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("26_gkdlk")
bus = &"SFX"

[node name="ChoiceButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("27_5do48")
bus = &"SFX"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimeLimit" to="." method="_on_time_limit_timeout"]
[connection signal="pressed" from="UI/TextureRect/CenterContainer/GearButton" to="." method="_on_gear_button_pressed"]
[connection signal="drag_started" from="UI/TextureRect/MarginContainer/VideoSlider" to="." method="_on_video_slider_drag_started"]
[connection signal="mouse_exited" from="UI/TextureRect/MarginContainer/VideoSlider" to="." method="_on_video_slider_mouse_exited"]
[connection signal="value_changed" from="UI/TextureRect/MarginContainer/VideoSlider" to="." method="_on_video_slider_value_changed"]
[connection signal="pressed" from="UI/TextureRect/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="UI/TextureRect/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="UI/TextureRect/ChoiceButton" to="." method="_on_choice_button_pressed"]
[connection signal="pressed" from="PauseScreen/ColorRect/NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/GridContainer/Unpause Button" to="." method="_on_unpause_button_pressed"]
[connection signal="pressed" from="PauseScreen/ColorRect/NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/GridContainer/Options Button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PauseScreen/ColorRect/NinePatchRect/MarginContainer/VBoxContainer/MarginContainer/CenterContainer/GridContainer/Quit Button" to="." method="_on_quit_button_pressed"]
[connection signal="LevelSelect" from="LevelEnd" to="." method="_on_level_end_level_select"]
[connection signal="Restart" from="LevelEnd" to="." method="_on_level_end_restart"]
